Fixed bug #74218 (ArrayIterator error message is confusing)